made small adjustments to footer

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -71,13 +71,13 @@
                         {% endif %}
 
                         <div class="card-body pb-0">
-                            <p class="mb-0">{{ product.name }}</p>
+                            <p class="mb-0 product-name">{{ product.name }}</p>
                         </div>
 
                         <div class="card-footer bg-white pt-0 border-0 text-left">
                             <div class="row">
                                 <div class="col">
-                                    <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                                    <p class="mb-0 text-left product-price">${{ product.price }}</p>
                                     {% if product.category %}
                                     <p class="small mt-1 mb-0">
                                         <a class="text-muted"
