--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="page-footer">
-         <div class="container">
-            <div class="row">
+   <div class="container">
+      <div class="row">
                <!-- social icons/links -->
                <div class="col">
-                  <ul class="pagination list-inline social-links">
+                  <ul class="d-flex pagination justify-content-center social-links">
                      <li><a target="_blank" class="social-icons"
                         href="https://www.facebook.com" rel="noopener"><i class="fab fa-facebook" aria-hidden="true"></i></a>
                      </li>
@@ -17,6 +17,10 @@
                      </li>
                   </ul>
                </div>
+               
             </div>
-         </div>
-      </footer>
+            <div class="small text-center pb-3">
+               Of Stories &copy; 2022 All Rights Reserved
+      </div>
+   </div>
+</footer>
