--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,10 +1,10 @@
 
 
 <!-- navbar template with bootstrap navbar -->
-<nav class="navbar navbar-light navbar-expand-lg menu">
+<nav class="navbar navbar-light navbar-expand-lg fixed-top menu">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="{{ MEDIA_URL }}logo.png"alt="" width="175" height="40">
+            <img src="{{ MEDIA_URL }}logo.png"alt="" width="auto" height="40" alt="Logo Of Stories">
         </a>
         <button class="navbar-toggler navbar-light bg-light" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
