added contact app

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,26 +1,25 @@
 <footer class="page-footer">
    <div class="container">
       <div class="row">
-               <!-- social icons/links -->
-               <div class="col">
-                  <ul class="d-flex pagination justify-content-center social-links">
-                     <li><a target="_blank" class="social-icons"
-                        href="https://www.facebook.com" rel="noopener"><i class="fab fa-facebook" aria-hidden="true"></i></a>
-                     </li>
-                     <li><a target="_blank" class="social-icons"
-                        href="https://www.instagram.com" rel="noopener"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                     </li>
-                     <li><a target="_blank" class="social-icons" href="https://www.twitter.com" rel="noopener"><i
+         <!-- social icons/links -->
+         <div class="col">
+            <ul class="d-flex pagination justify-content-center social-links">
+               <li><a target="_blank" class="social-icons" href="https://www.facebook.com" rel="noopener"><i
+                        class="fab fa-facebook" aria-hidden="true"></i></a>
+               </li>
+               <li><a target="_blank" class="social-icons" href="https://www.instagram.com" rel="noopener"><i
+                        class="fab fa-instagram" aria-hidden="true"></i></a>
+               </li>
+               <li><a target="_blank" class="social-icons" href="https://www.twitter.com" rel="noopener"><i
                         class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                     <li><a target="_blank" class="social-icons"
-                        href="https://www.pinterest.com" rel="noopener"><i class="fab fa-pinterest" aria-hidden="true"></i></a>
-                     </li>
-                  </ul>
-               </div>
-               
-            </div>
-            <div class="small text-center pb-3">
-               Of Stories &copy; 2022 All Rights Reserved
+               <li><a target="_blank" class="social-icons" href="https://www.pinterest.com" rel="noopener"><i
+                        class="fab fa-pinterest" aria-hidden="true"></i></a>
+               </li>
+            </ul>
+         </div>
+      </div>
+      <div class="small text-center pb-3">
+         Of Stories &copy; 2022 All Rights Reserved
       </div>
    </div>
 </footer>
