--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -61,6 +61,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contact' %}" class="dropdown-item">Contact</a>
+                </li>
+                
               
                 {% endif %}
             </ul>
