changed placeholder text on contact form

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -8,14 +8,14 @@
     <div class="row">
         <div class="col-md-8 col-md-10 mx-auto">
             <h2 class="sub-heading mb-4 text-center">Contact</h2>
-            <p class="text-center">For stockist, collaboration or any other enquiries, please get in touch using the form below</p>
+            <p class="text-center">For stockist, collaboration or any other enquiries, please get in touch using the form below </p>
         </div>
     </div>
 </div>
 
 
 <div class="container">
-    <div class="row">
+    <div class="row padding-row">
         <div class="col-md-8 mt-3">
             <!-- Contact form -->
             <form class="contact-form" action="{% url 'contact' %}" method="POST">
@@ -25,7 +25,7 @@
                 
                 <p>* = Required field</p>
                 <div class="col-12">
-                    <button type="submit" class="btn">Send</button>
+                    <button type="submit" class="btn">Send Message</button>
                 </div>
             </form>
         </div>
