--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,7 +1,7 @@
 
 
 <!-- navbar template with bootstrap navbar -->
-<nav class="navbar navbar-light navbar-expand-lg fixed-top menu">
+<nav class="navbar navbar-light navbar-expand-lg menu">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">
             <img src="{{ MEDIA_URL }}logo.png"alt="" width="auto" height="40" alt="Logo Of Stories">
@@ -18,9 +18,6 @@
                         Home
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'blog' %}" class="dropdown-item">Stories</a>
-                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
@@ -32,6 +29,9 @@
                         <a href="{% url 'products' %}?category=pillows" class="dropdown-item">Pillows</a>
                         <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
                     </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'blog' %}" class="dropdown-item">Stories</a>
+                    </li>
                     <!-- nav links showing only if user is logged in as admin -->
                     {% if request.user.is_superuser %}
                     <li class="nav-item dropdown">
