--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -7,12 +7,9 @@
 <div class="container-fluid header-container">
     <div class="row">
         <div class="col text-center mt-3">
-            <h2 class="sub-heading">Products</h2>
+
             {% for c in current_categories %}
-            <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                <span
-                    class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
-            </a>
+            <h2 class="sub-heading" href="{% url 'products' %}?category={{ c.name }}">{{ c.friendly_name }}</h2>
             {% endfor %}
 
         </div>
