--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-    <div class="container-fluid h-100">
+    <div class="index-hero container-fluid h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
             
@@ -12,7 +12,7 @@
                     Peru Collection
                 </h1>
                 <hr>
-                <h3 class="text-center"></h4>
+                <h3 class="text-center"></h3>
                 <div class="my-5 text-center">
                     <h4>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
@@ -21,4 +21,80 @@
             </div>
         </div>
     </div>
+
+
+
+    <div class="container-fluid bg-white">
+        <div class="row">
+            <div class="col">
+                <h2 class="mb-4 mt-4 text-center">The world’s most gorgeous goods for your home.<br>
+                    All thoughtfully designed & ethically crafted.</h2>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container-fluid bg-white">
+        <div class="row">
+            <div class="col">
+
+                <div class="card-deck">
+
+                    <div class="card rounded-0 index-image-baskets">
+                        <img class="card-img" src="{{ MEDIA_URL }}fine-weave-baskets.png" alt="Card image">
+                        <div class="card-img-overlay my-5 text-center">
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+
+
+                            <a href="{% url 'products' %}?category=baskets" 
+                                class="image-button btn btn-lg rounded-0 text-uppercase py-3">Baskets</a>
+
+                        </div>
+                    </div>
+
+                    <div class="card rounded-0 index-image-pillows">
+                        <img class="card-img" src="{{ MEDIA_URL }}pillows.jpg" alt="Card image">
+                        <div class="card-img-overlay my-5 text-center">
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+
+
+
+                            <a href="{% url 'products' %}?category=pillows"
+                                class="image-button btn btn-lg rounded-0 text-uppercase py-3">Pillows</a>
+
+                        </div>
+                    </div>
+
+
+
+                    <div class="card rounded-0 index-image-blankets">
+                        <img class="card-img" src="{{ MEDIA_URL }}alpaca-blanket.jpg" alt="Card image">
+                        <div class="card-img-overlay my-5 text-center">
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+
+
+                            <a href="{% url 'products' %}?category=blankets"
+                                class="image-button btn btn-lg rounded-0 text-uppercase py-3">Blankets</a>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+  
+  
+
 {% endblock %}
