--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,8 +3,7 @@ html {
 }
 
 body {
-    background: url('/media/homepage-background.jpg') no-repeat center center fixed;
-    background-size: cover;
+  
     color: #555;
     font-family: 'Open Sans', sans-serif;
     margin:0;
@@ -76,7 +75,7 @@ nav ul li a {
 }
 
 .nav-search{
-    border-color: #81665f;
+    border-color: #555;
 	border-radius: 1.5rem;
 	height: 1.8rem;
 	width: 10rem;
@@ -89,6 +88,57 @@ nav ul li a {
 }
 
 /* -------------------------------- home page */
+.index-hero{
+    background: url('/media/homepage-background.jpg') no-repeat center center fixed;
+    background-size: cover;
+    height:100vh;
+}
+
+/*https://www.sliderrevolution.com/resources/css-button-hover-effects/*/
+.shop-now-button {
+    min-width: 260px;
+    transition: all .5s ease;
+    color: #555;
+    border: 2px solid black;
+    font-family:'Open Sans', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 1;
+    font-size: 17px;
+    background-color: transparent;
+    padding: 10px;
+    outline: none;
+    border-radius: 4px;
+
+}
+
+.shop-now-button:hover {
+    color: #001F3F;
+    background-color: #fff;
+  
+   
+}
+
+.card-img{
+    object-fit: cover;
+}
+
+.image-button{
+    min-width: 160px;
+    transition: all .5s ease;
+    color: #555;
+    border: 2px solid black;
+    font-family:'Open Sans', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 1;
+    font-size: 17px;
+    background-color: #fff;
+    padding: 10px;
+    outline: none;
+    border-radius: 4px;
+    
+}
 
 /* -------------------------------- other */
 
@@ -111,11 +161,7 @@ nav ul li a {
     color: white;
 }
 
-.shop-now-button {
-    background: #81665f;
-    color: white;
-    min-width: 260px;
-}
+
 
 .overlay{
     height: 100%;
