--- a/templates/base.html
+++ b/templates/base.html
@@ -49,10 +49,11 @@
 
 <div id="delivery-banner" class="row text-center">
     <div class="col">
-        <h4 class="my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
+        <h4 class="my-1">Free delivery on orders over ${{ free_delivery_threshold }}</h4>                
     </div>            
 </div>
     
+
 <!-- Including the navbar in template -->
 {% include 'includes/main-nav.html' %}
      
