--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -48,7 +48,7 @@
                         <div class="form-row">
                             <div class="col-12">
                                 <p class="mt-3">Quantity:</p>
-                                <div class="form-group w-50">
+                                <div class="form-group w-50 border">
                                     <div class="input-group input-group-{{ product.id }}">
                                         <div class="input-group-prepend">
                                             <button class="decrement-qty btn decrement-qty_{{ product.id }}" 
@@ -58,7 +58,7 @@
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input id_qty_{{ product.id }}" type="number"
+                                        <input class="form-control border-0 text-center qty_input id_qty_{{ product.id }}" type="number"
                                             name="quantity" value="1" min="1" max="99"
                                             data-item_id="{{ product.id }}">
                                         <div class="input-group-append">
