made layout changes to allauth templates

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 
-<h2 class="sub-heading mb-4">{% trans "Log In" %}</h2>
+<h2 class="sub-heading mb-4 text-center">{% trans "Log In" %}</h2>
 
 {% get_providers as socialaccount_providers %}
 
