--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -5,7 +5,7 @@
 
 {% block inner_content %}
     
-    <h2 class="sub-heading mb-4">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+    <h2 class="sub-heading mb-4 text-center">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
     
 
     {% if token_fail %}
