--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,7 +6,8 @@
 
 {% block inner_content %}
 
-<h2 class="sub-heading mb-4">{% trans "Sign Up" %}</h2>
+
+<h2 class="sub-heading mb-4 text-center">{% trans "Sign Up" %}</h2>
 
 
 <p>{% blocktrans %}Already have an account? <a href="{{ login_url }}">Log in</a>.{% endblocktrans %}</p>
