--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container header-container">
-        <div class="overlay"></div>
+<div class="overlay"></div>
+    <div class="container mb-2 header-container">
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-md-8 col-md-6 mx-auto">
                 <div class="allauth-form-inner-content">
                     {% block inner_content %}
                     {% endblock %}
