--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -8,7 +8,7 @@
 
 {% block inner_content %}
 
-<h2 class="sub-heading mb-4">{% trans "Confirm E-mail Address" %}</h2>
+<h2 class="sub-heading mb-4 text-center">{% trans "Confirm E-mail Address" %}</h2>
 
 
 {% if confirmation %}
