--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-<h2 class="sub-heading mb-4">{% trans "Sign Out" %}</h2>
+<h2 class="sub-heading mb-4 text-center">{% trans "Sign Out" %}</h2>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
