--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
     
-    <h2 class="sub-heading mb-4">{% trans "Change Password" %}</h2>
+    <h2 class="sub-heading mb-4 text-center">{% trans "Change Password" %}</h2>
     
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
