--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -8,7 +8,7 @@
 {% block inner_content %}
 
     
-    <h2 class="sub-heading mb-4">{% trans "Password Reset" %}</h2>
+    <h2 class="sub-heading mb-4 text-center">{% trans "Password Reset" %}</h2>
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
