--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
     
-    <h2 class="sub-heading mb-4">{% trans "Password Reset" %}</h2>
+    <h2 class="sub-heading mb-4 text-center">{% trans "Password Reset" %}</h2>
     
     
     {% if user.is_authenticated %}
