--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -5,7 +5,7 @@
 
 {% block inner_content %}
     
-    <h2 class="sub-heading mb-4">{% trans "Change Password" %}</h2>
+    <h2 class="sub-heading mb-4 text-center">{% trans "Change Password" %}</h2>
     
     <p>{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
