--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
     
-    <h2 class="sub-heading mb-4">{% trans "Set Password" %}</h2>
+    <h2 class="sub-heading mb-4 text-center">{% trans "Set Password" %}</h2>
     
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
