--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-<h2 class="sub-heading mb-4">{% trans "Sign Up Closed" %}</h2>
+<h2 class="sub-heading mb-4 text-center">{% trans "Sign Up Closed" %}</h2>
 
 
 <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
