--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
     
-    <h2 class="sub-heading mb-4">{% trans "Verify Your E-mail Address" %}</h2>
+    <h2 class="sub-heading mb-4 text-center">{% trans "Verify Your E-mail Address" %}</h2>
     
 
     <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
