--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-<h2 class="sub-heading mb-4">{% trans "Verify Your E-mail Address" %}</h2>
+<h2 class="sub-heading mb-4 text-center">{% trans "Verify Your E-mail Address" %}</h2>
 
 
 {% url 'account_email' as email_url %}
