changed layout on quantity button

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,22 +2,12 @@
 {% load static %}
 {% load bag_tools %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
-
 {% block content %}
 <div class="overlay-white"></div>
-    <div class="container mb-2">
+    <div class="container header-container mb-2">
         <div class="row">
             <div class="col">
-                
                 <h2 class="sub-heading mb-4 text-center">Shopping bag</h2>
-                
             </div>
         </div>
 
@@ -64,7 +54,6 @@
                             <thead class="text-black">
                                 <tr>
                                     <th scope="col">Product Info</th>
-                                    <th scope="col"></th>
                                     <th scope="col">Price</th>
                                     <th scope="col">Qty</th>
                                     <th scope="col">Subtotal</th>
