--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,7 +33,7 @@ a {
 }
 
 .btn{
-    background-color: #81665f;
+    background-color: #DEB468;
     color: white;
     text-transform: uppercase;
 }
@@ -137,7 +137,7 @@ nav ul li a {
     padding: 10px;
     outline: none;
     border-radius: 4px;
-    
+    margin-top: 100px;
 }
 
 /* -------------------------------- other */
