--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,7 +16,7 @@
         {% endif %}
         <p class=" text-muted">{{ post.author.first_name }} | {{ post.created_on }}</p>
         <p class="card-text ">{{ object.content | safe }}</p>
-        <a href="{% url 'blog' %}" class="btn btn-blog"><i class="fas fa-angle-double-left"></i> Back to blogposts</a>
+        <a href="{% url 'blog' %}" class="btn btn-blog border-0"><i class="fas fa-angle-double-left"></i> Back to blogposts</a>
       </div>
     </div>
   </div>
