--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="overlay"></div>
     <div class="container mb-2 header-container">
-        <div class="row">
-            <div class="col-md-8 col-md-6 mx-auto">
+        <div class="row padding-row">
+            <div class="col-md-6 mx-auto">
                 <div class="allauth-form-inner-content">
                     {% block inner_content %}
                     {% endblock %}
