--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -8,6 +8,7 @@
 
 <h2 class="sub-heading mb-4 text-center">{% trans "Sign Out" %}</h2>
 
+<div class="text-center">
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
@@ -18,6 +19,6 @@
   <a class="btn rounded-0" href="{% url 'home' %}">Cancel</a>
   <button type="submit btn">{% trans 'Sign Out' %}</button>
 </form>
-
+</div>
 
 {% endblock %}
