--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -18,8 +18,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-  <button type="submit">{% trans "Sign Up" %}</button>
+  <button class="btn btn-block rounded-0" type="submit">{% trans "Sign Up" %}</button>
 </form>
 
 {% endblock %}
