--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -6,7 +6,7 @@
 <div class="overlay"></div>
 <div class="container mb-2 header-container">
     <div class="row">
-        <div class="col-md-8 col-md-10 mx-auto">
+        <div class="col-md-8 mx-auto">
             <h2 class="sub-heading mb-4 text-center">Contact</h2>
             <p class="text-center">For stockist, collaboration or any other enquiries, please get in touch using the form below </p>
         </div>
@@ -16,7 +16,7 @@
 
 <div class="container">
     <div class="row padding-row">
-        <div class="col-md-8 col-md-6 mx-auto">
+        <div class="col-md-8 mx-auto">
             <!-- Contact form -->
             <form class="contact-form" action="{% url 'contact' %}" method="POST">
                 {% csrf_token %}
@@ -25,7 +25,7 @@
                 
                 <p>* = Required field</p>
                 <div class="col-12">
-                    <button type="submit" class="btn rounded-0">Send Message</button>
+                    <button type="submit" class="btn btn-block rounded-0">Send Message</button>
                 </div>
             </form>
         </div>
