--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,8 +26,7 @@
     <div class="container-fluid bg-white">
         <div class="row">
             <div class="col">
-                <h2 class="mb-4 mt-4 text-center">The world’s most gorgeous goods for your home.<br>
-                    All thoughtfully designed & ethically crafted.</h2>
+                <h3 class="mb-4 mt-4 text-center">From global artisans to your home</h3>
             </div>
         </div>
     </div>
