--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,7 +14,7 @@
           <a class="text-danger" href="{% url 'delete_post' post.pk  %}">Delete Post</a>
       </small>
         {% endif %}
-        <p class=" text-muted">{{ post.author.first_name }} | {{ post.created_on }}</p>
+        <p class=" text-muted">{{ post.created_on }}</p>
         <p class="card-text ">{{ object.content | safe }}</p>
         <a href="{% url 'blog' %}" class="btn btn-blog border-0"><i class="fas fa-angle-double-left"></i> Back to blogposts</a>
       </div>
