--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" >
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <link rel="shortcut icon" type="image/png" href="media/favicon.jpg">
+    <link rel="icon" href="{{ MEDIA_URL }}favicon.jpg">
+
     
 {% endblock %}
 
