made migrations to contac save contact_form

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -8,7 +8,7 @@
 <div class="overlay"></div>
 <div class="container mb-2 header-container">
     <div class="row">
-        <div class="col-md-8 col-md-10 mx-auto">
+        <div class="col-md-8 mx-auto">
                 <h2 class="sub-heading mb-4 text-center">Blog</h2>
             
         </div>
@@ -18,7 +18,7 @@
 <div class="container">
     <div class="row">
         <!-- Blog Entries Column -->
-        <div class="col-md-8 mt-3 left">
+        <div class="col-md-8 mt-3 mx-auto">
             {% for post in post_list %}
             <div class="card mb-4">
                 <div class="card-body">
