--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,7 +5,7 @@
 <div class="overlay"></div>
 <div class="container mb-2 header-container">
   <div class="row">
-    <div class="col-md-8 card mb-4  mt-3 left top">
+    <div class="col-md-8 card mb-4  mt-3 mx-auto">
       <div class="card-body">
         <h2>{% block title %} {{ object.title }} {% endblock title %}</h2>
         {% if request.user.is_superuser %}
