--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -4,16 +4,15 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container header-container">
+<div class="container mb-2 header-container">
     <div class="row">
-        <div class="col-12 col-md-6">
-            <h2 class="sub-heading mb-4">Product Management</h2>
-            <h5 class="text-muted mb-2">Add a Product</h5>
+        <div class="col-md-8 mx-auto">
+            <h2 class="sub-heading mb-4 text-center">Add a Product</h2>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="row padding-row">
+            <div class="col-md-8 mx-auto">
             <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
@@ -23,9 +22,10 @@
                 {{ field }}
                 {% endif %}
                 {% endfor %}
+                <br>
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+                    <a class="btn rounded-0" href="{% url 'products' %}">Cancel</a>
+                    <button class="btn rounded-0" type="submit">Add Product</button>
                 </div>
             </form>
         </div>
