--- a/templates/500.html
+++ b/templates/500.html
@@ -7,9 +7,9 @@
     <div class="row padding-row">
         <div class="col-md-8 mx-auto">
             <h2 class="sub-heading mb-4 text-center">Sorry</h2>
-            <h2 class="text-center">something went wrong</h2>
+            <h2 class="text-center">An internal server error occured</h2>
             <h3 class="text-center">- 500 Error -</h3>
-            <a class="btn rounded-0" href="{% url 'home' %}">Go back to homepage</a>
+            <a class="btn text-center rounded-0" href="{% url 'home' %}">Go back to homepage</a>
         </div>
     </div>
 </div>
