--- a/blog/templates/blog/add_post.html
+++ b/blog/templates/blog/add_post.html
@@ -14,13 +14,13 @@
 <div class="overlay"></div>
 <div class="container mb-2">
     <div class="row">
-        <div class=" col-md-8 col-md-10 mx-auto">
+        <div class="col-md-8 mx-auto">
                 <h2 class="sub-heading mb-4 text-center">Add Blog Post</h2>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 col-md-6">
+    <div class="row padding-row">
+        <div class="col-md-8 mx-auto">
             <form method="POST" action="{% url 'add_post' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
@@ -31,8 +31,8 @@
                     {% endif %}
                 {% endfor %}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'blog' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Add Post</button>
+                    <a class="btn rounded-0" href="{% url 'blog' %}">Cancel</a>
+                    <button class="btn rounded-0" type="submit">Add Post</button>
                 </div>
             </form>
         </div>            
