--- a/blog/templates/blog/delete_post.html
+++ b/blog/templates/blog/delete_post.html
@@ -14,9 +14,11 @@
 <div class="overlay"></div>
 <div class="container mb-2">
     <div class="row">
-        <div class="col-md-8 col-md-10 mx-auto">
+        <div class="col-md-8 mx-auto">
                 <h2 class="sub-heading mb-4 text-center">Delete Blog Post</h2>
-                <h3 class="text-center">Are you sure you want to delete:<br><strong>{{ post.title }}</strong>?</h3>
+                <h2 class="text-center">Are you sure you want to delete:<br><br><strong>{{ post.title }}</strong>?</h2>
+                <br>
+                <h3 class="text-center">(this can't be undone)</h3>
         </div>
     </div>
 
