updated social media links

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,15 +4,15 @@
          <!-- social icons/links -->
          <div class="col">
             <ul class="d-flex pagination justify-content-center social-links">
-               <li><a target="_blank" class="social-icons" href="https://www.facebook.com" rel="noopener"><i
+               <li><a target="_blank" class="social-icons" href="https://www.facebook.com/ofstories" rel="noopener"><i
                         class="fab fa-facebook" aria-hidden="true"></i></a>
                </li>
-               <li><a target="_blank" class="social-icons" href="https://www.instagram.com" rel="noopener"><i
+               <li><a target="_blank" class="social-icons" href="https://www.instagram.com/ofstories" rel="noopener"><i
                         class="fab fa-instagram" aria-hidden="true"></i></a>
                </li>
                <li><a target="_blank" class="social-icons" href="https://www.twitter.com" rel="noopener"><i
                         class="fab fa-twitter" aria-hidden="true"></i></a></li>
-               <li><a target="_blank" class="social-icons" href="https://www.pinterest.com" rel="noopener"><i
+               <li><a target="_blank" class="social-icons" href="https://www.pinterest.se/ofstories/" rel="noopener"><i
                         class="fab fa-pinterest" aria-hidden="true"></i></a>
                </li>
             </ul>
