--- a/templates/404.html
+++ b/templates/404.html
@@ -10,7 +10,7 @@
             <h2 class="text-center">We can't seem to find the page you're looking for</h2>
             <h3 class="text-center">- 404 Error -</h3>
         </div>
-            <div class="text-center"></div>
+            <div class="text-center">
                 <a class="btn text-center rounded-0" href="{% url 'home' %}">Go back to homepage</a>
             </div>
     </div>
