--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -6,16 +6,13 @@
     <div class="overlay"></div>
     <div class="container header-container">
         <div class="row">
-            <div class="col-12 col-md-6">
-                <hr>
-                <h2 class="sub-heading mb-4">Product Management</h2>
-                <h5 class="text-muted">Edit a Product</h5>
-                <hr>
+            <div class="col-md-8 mx-auto">
+                <h2 class="sub-heading mb-4 text-center">Edit Product</h2>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-12 col-md-6">
+        <div class="row padding-row">
+            <div class="col-md-8 mx-auto">
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2"
                     enctype="multipart/form-data">
                     {% csrf_token %}
