--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -2,14 +2,14 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block head_title %}{% trans "Log Out" %}{% endblock %}
 
 {% block inner_content %}
 
-<h2 class="sub-heading mb-4 text-center">{% trans "Sign Out" %}</h2>
+<h2 class="sub-heading mb-4 text-center">{% trans "Log Out" %}</h2>
 
 <div class="text-center">
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p>{% trans 'Are you sure you want to log out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
@@ -17,7 +17,7 @@
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
   <a class="btn rounded-0" href="{% url 'home' %}">Cancel</a>
-  <button type="submit btn">{% trans 'Sign Out' %}</button>
+  <button type="submit btn">{% trans 'Log out' %}</button>
 </form>
 </div>
 
