--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -39,7 +39,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button class="btn btn-block rounded-0" type="submit">{% trans "Sign In" %}</button>
+  <button class="btn btn-block rounded-0" type="submit">{% trans "Log In" %}</button>
   <p class="mt-2">
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </p>
