added breadcrum on product pages

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -6,7 +6,16 @@
 {% block content %}
 <div class="overlay-white"></div>
 <div class="container-fluid header-container">
-
+    <!--Breadcrumb-->
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+            <li class="breadcrumb-item"><a
+                    href="{% url 'products' %}?category={{ product.category.name }}">{{ product.category.friendly_name }}</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">{{ product.name }}</li>
+        </ol>
+    </nav>
     <!--image-->
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
