--- a/templates/500.html
+++ b/templates/500.html
@@ -9,7 +9,10 @@
             <h2 class="sub-heading mb-4 text-center">Sorry</h2>
             <h2 class="text-center">An internal server error occured</h2>
             <h3 class="text-center">- 500 Error -</h3>
-            <a class="btn text-center rounded-0" href="{% url 'home' %}">Go back to homepage</a>
+            <br><br>
+            <div class="text-center">
+                <a class="btn text-center rounded-0" href="{% url 'home' %}">Go back to homepage</a>
+            </div>
         </div>
     </div>
 </div>
