--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -44,7 +44,7 @@
                 <div class="col-12 col-md-6 order-md-first">
                     <p class="text-muted mt-3 text-center text-md-left">
                         {% if search_term or current_categories or current_sorting != 'None_None' %}
-                        <span class="small"><a href="{% url 'products' %}">All Products</a> | </span>
+                        <span><a href="{% url 'products' %}"><i class="fas fa-angle-double-left"></i> All Products</a> | </span>
                         {% endif %}
                         {{ products|length }} Products{% if search_term %} found for
                         <strong>"{{ search_term }}"</strong>{% endif %}
@@ -91,7 +91,7 @@
                                     {% if request.user.is_superuser %}
                                     <small class="ml-3">
                                         <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                        <a class="text-danger" href="{% url 'confirm_delete_product' product.id %}">Delete</a>
                                     </small>
                                     {% endif %}
                                 </div>
